# learn-loop-engineer

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  evaluator.py  pyproject.toml
.claude/: settings.local.json
deepagent/: agent.py
docs/: PLAN.md
docs/findings/: 2026-07-07-deepagent-tool-namespace-collision.md  2026-07-08-deepagent-native-only-tools.md  2026-07-09-deepagent-backend-statebackend.md  2026-07-09-deepagent-localshell-validate-path.md  2026-07-10-virtual-mode-and-infra-alignment.md
docs/reference/: loop.py  schemas.py
docs/superpowers/plans/: 2026-07-07-week1-minimal-loop.md
docs/superpowers/specs/: 2026-07-07-week1-minimal-loop-design.md
handroll/: agent.py
handroll/evaluator/: evaluator.py
handroll/executor/: executor.py
handroll/loop/: loop.py
handroll/observation/: formatter.py
lessons/lesson1/: script.md  slides.html
lessons/lesson1/code/: v1_bare_loop.py  v2_with_tools.py  v3_with_evaluator.py  v4_final.py
lessons/lesson1/presentation/: .theme  (+1 more)
loop_engineer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/tools/: bash_exec.py  file_read.py  file_write.py  schemas.py
shared/tracker/: run_logger.py
shared/utils/: config.py  llm_client.py  sandbox.py
tasks/: __init__.py  task_base.py
tasks/benchmark/: task_01_simple_script.py
tests/: conftest.py  test_bash_exec.py  test_config.py  test_evaluator.py  test_executor.py  test_file_read.py  test_file_write.py  test_formatter.py  test_llm_client.py  test_loop.py  test_run_logger.py  test_sandbox.py  test_schemas.py  test_task_01.py
(+37 files in other folders)
