[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineer"
version = "0.1.0"
description = "Loop Engineering Lab — handroll vs deepagents comparison"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "deepagents>=0.0.5",
    "rich>=13",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "handroll*", "deepagent*", "tasks*"]
exclude = ["tests*", "docs*", "sandbox*", "outputs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
